--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,5 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="textView1">Контакты</string>
-    <string name="textView2">Информация</string>
+    <string name="button_export">Экспортировать контакты</string>
 </resources>
